--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
 
 <div class="hero-image">
   <div class="hero-text">
-      <h1>Elevator Pitch Generator</h1>
-      <h6>Powered by Stasis Theory</h6>
+      <h1>College Cookbook</h1>
+      <h6> By Nick Phillips, Jaden Adams, Ashley Browske, Zach Painter, Ronald Xu, and Steve Johns</h6>
   </div>
 </div>
 
