--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
   <div class="hero-text">
       <h1>College Cookbook</h1>
       <h6> By Nick Phillips, Jaden Adams, Ashley Browske, Zach Painter, Ronald Xu, and Steve Johns</h6>
+    <a href="about.html"> About Page </a>
   </div>
 </div>
 
