--- a/About.html
+++ b/About.html
@@ -21,10 +21,29 @@
                 </div>
             </div>
             <div class="textblock" style="text-align: center">
-                <h2>Inclusivity Statement </h2>
+                <h2>Guidelines for Adding Recipes: </h2>
+                <div class="About-Info">
                     <h3> 
+                        <ul>
+                            <li> We encourage anyone who would like to contribute a recipe to reach out to us.
+                                 Our goal is to have a surplus of diverse meals that college students no matter the demographic can comfortably enjoy. 
+                            </li>
+                            <li> Keep in mind that the target audience for this cookbook is college students.
+                                 Meals should be inexpensive, short in cooking time, and preparable with limited kitchen equipment. 
+                            </li>
+                            <li> This cookbook should always have a wide variety of meals. 
+                                 Different kinds of meats are encouraged, as well as vegetarian and vegan options.
+                            </li>
+                            <li> Lastly, this cookbook is intended to only include healthy meals.
+                                 College students often neglect their diet and in turn consume lots of sugar and saturated fats.
+                                 The meals included here should be healthy options and limit the levels of unhealthy ingredients. 
+                            </li>
+                        </ul>
                     </h3>
+                </div>
+                    <h6><a href="elevator-pitch-generator-master/index.html"> Concept Pitch </a></h6>
             </div>
+
 
         </body>
     </html>
