--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
             </div>
         </div>
         <div class="textblock" style="text-align: center">
-            <h2>Rationale</h2>
-                <h3>    Many college students fail to eat well rounded meals and would benefit from the use of a healthy cookbook. 
+            <h2>Purpose</h2>
+                <h3>    <!--Many college students fail to eat well rounded meals and would benefit from the use of a healthy cookbook. 
                         Eating well promotes immune system health and higher energy levels which impact the success of students. 
-                        A poor diet puts students at risk of illness which will affect their ability to perform in school.
+                        A poor diet puts students at risk of illness which will affect their ability to perform in school.-->
+                        This college-friendly cookbook presents an array of recipes that are easy to follow and healthy. 
+                        With busy schedules, college students do not prioritize their eating habits. 
+                        With the help of this cookbook, these recipes promote healthy eating and boost their energy so they could focus on succeeding in school. 
+                        The design intends for others to be inspired and add their own recipes to this cookbook that others can benefit from.
                 </h3>
         </div>
 
