--- a/Contact.html
+++ b/Contact.html
@@ -22,13 +22,19 @@
             </div>
             <div class="textblock" style="text-align: center">
                 <h2>Contact Information </h2>
+                <div class="Contact-Info">
                     <h3> 
+                        If you would like to contribute to the cookbook, feel free to contact one of us at one of the following emails:
                         <ul>
-                            <li> 
-                                Email: srj42@pitt.edu
-                            </li>
+                            <li> stevenrj2@gmail.com </li>
+                            <li> abrowske3@gmail.com </li>
+                            <li> nickphillips732@gmail.com </li>
+                            <li> zpainter99@gmail.com </li>
+                            <li> Jadenoliviaradams@gmail.com </li>
+                            <li> rxu.ronald@gmail.com </li>
                         </ul>
                     </h3>
+                </div>
             </div>
             
             
