--- a/elevator-pitch-generator-master/index.html
+++ b/elevator-pitch-generator-master/index.html
@@ -76,7 +76,7 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
 
     <!--Replace the image here. You can also control image width and height %.-->
 
- <img src="recipebook.jpg" alt="descibe image here for accessibility issues" class="center-img" style="width:50%;height:50%;">
+ <img src="recipeBook.jpg" alt="descibe image here for accessibility issues" class="center-img" style="width:50%;height:50%;">
 
 
 
