--- a/About.html
+++ b/About.html
@@ -42,7 +42,7 @@
                     </h3>
                 </div>
                     <h6><a href="elevator-pitch-generator-master/index.html"> Concept Pitch </a></h6>
-                    <h6><a href="github.com/srj42/Cookbook"> Github Repository </a></h6>
+                    <h6><a href="https://github.com/srj42/Cookbook" target="_blank"> Github Repository </a></h6>
             </div>
 
 
