--- a/elevator-pitch-generator-master/index.html
+++ b/elevator-pitch-generator-master/index.html
@@ -29,6 +29,13 @@ BTW. You can leave these faded comments be, or delete them. They are but road si
 
 <!--Replace the project title and provide a flashy subtitle. Developers refer to this division as a "Hero Block." You don't need to do anything in this html. code, but you'll need to change the background image on the style.css page. First replace the el1.jpg with a .jpg or .png in the project folder (hint: simplify the name). Then use your text editor to open your style.css sheet, find the hero image, and replace el1.jpg with the name of your new image-->
 
+    <ul class="navbar">
+        <li><a href="../index.html"> Home </a></li>
+        <li><a href="../Recipes.html"> Recipes </a></li>
+        <li><a href="../About.html"> About </a></li>
+        <li><a href="../Contact.html"> Contact Us</a></li>
+    </ul>
+  
 <div class="hero-image">
   <div class="hero-text">
       <h1>Creating a Healthy Diet</h1>
